filter/outbound.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: outbound-filter
  namespace: ab
spec:
  workloadLabels:
    app: caller-app
  filters:
  - listenerMatch:
      portNumber: 8080
      listenerType: SIDECAR_OUTBOUND
    filterName: envoy.lua
    filterType: HTTP
    insertPosition:
      index: FIRST
    filterConfig:
      inlineCode: |
        function envoy_on_request(request_handle)
          request_handle:logWarn(request_handle:headers():get(":path"));
        end
