filter/r1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-filter-ab
  namespace: ab
spec:
  workloadLabels:
    app: istio-ingressgateway
  filters:
  - listenerMatch:
      portNumber: 80
      listenerType: GATEWAY
    filterName: envoy.lua
    filterType: HTTP
    insertPosition:
      index: FIRST
    filterConfig:
      inlineCode: |
        function envoy_on_request(request_handle)
          local path= request_handle:headers():get(":path");
          if path~="/health" then
            request_handle:headers():add("myheader2-pod","superheader-pod");
            request_handle:logWarn("pathnew "..path);
          end
        end
