filter/testfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-test
  namspace: istio-system
spec:
  workloadLabels:
  filters:
    - listenerMatch:
        listenerProtocol: HTTP
        listenerType: SIDECAR_INBOUND
      filterName: envoy.lua
      filterType: HTTP
      filterConfig:
        inlineCode: |
          function envoy_on_request(request_handle)
            request_handle:logCritical("log test")
          end
